--- a/index.html
+++ b/index.html
@@ -11,7 +11,11 @@
     <title>The Code Review</title>
 </head>
 <body>
-    <header></header>
+    <header>
+        <h1>The Code Review</h1>
+        <h2>Signup for our newsletter</h2>
+        <p>Get the latest news on how your code is doing right in your inbox</p>
+    </header>
     <main></main>
     <footer></footer>
 </body>
