--- a/index.html
+++ b/index.html
@@ -99,13 +99,13 @@
                 <legend>Newsletter</legend>
 
                 <label>Select the newsletters you would like to receive</label><br>
-                <input type="checkbox" id="html" value="news_html"><label for="html">HTML News</label><br>
-                <input type="checkbox" id="css" value="news_css"><label for="css">CSS News</label><br>
-                <input type="checkbox" id="javascript" value="news_javascript"><label for="javascript">Javascript News</label><br>
-
+                <input type="checkbox" id="html" value="news_html" name="user_newsletters"><label for="html">HTML News</label><br>
+                <input type="checkbox" id="css" value="news_css" name="user_newsletters"><label for="css">CSS News</label><br>
+                <input type="checkbox" id="javascript" value="news_javascript"  name="user_newsletters"><label for="javascript">Javascript News</label><br>
+                
                 <label>Newsletter format</label><br>
-                <input type="radio" id="html-format" value="format_html"><label for="html-format">HTML</label><br>
-                <input type="radio" id="plain-text" value="format_plain"><label for="plain-text">Plain text</label><br>
+                <input type="radio" id="html-format" value="html-format" name="user_format"><label for="html-format">HTML</label><br>
+                <input type="radio" id="plain-text" value="plain-text" name="user_format"><label for="plain-text">Plain text</label><br>
 
                 <label for="other-topics">Other topics you'd like to hear about</label><br>
                 <textarea id="other-topics" name="other_topics"></textarea>
