--- a/index.html
+++ b/index.html
@@ -28,13 +28,13 @@
                 <input type="email" id="email" name="user_email" placeholder="Required" required>
 
                 <label for="phone">Phone Number</label>
-                <input type="tel" id="phone" name="user_phone">
+                <input type="tel" id="phone" name="user_phone" placeholder="Phone number">
 
                 <label for="address">Street Address</label>
-                <input type="text" id="address" name="user_address">
+                <input type="text" id="address" name="user_address" placeholder="Address">
 
                 <label for="city">City</label>
-                <input type="text" id="city" name="user_city">
+                <input type="text" id="city" name="user_city" placeholder="City">
 
                 <label for="state">State</label>
                 <select id="state" name="user_state">
@@ -92,7 +92,7 @@
                 </select>
 
                 <label for="zip">Zip Code</label>
-                <input type="number" id="zip" name="user_zip">
+                <input type="number" id="zip" name="user_zip" placeholder="Zip">
             </fieldset>
 
             <fieldset>
@@ -108,7 +108,7 @@
                 <input type="radio" id="plain-text" value="plain-text" name="user_format"><label for="plain-text">Plain text</label><br>
 
                 <label for="other-topics">Other topics you'd like to hear about</label><br>
-                <textarea id="other-topics" name="other_topics"></textarea>
+                <textarea id="other-topics" name="other_topics" placeholder="Type here"></textarea>
                 
             </fieldset> 
             <button type="submit">Sign Up</button>
