--- a/index.html
+++ b/index.html
@@ -18,98 +18,107 @@
     </header>
     <main>
         <form action="index.html" method="POST">
-            <fieldset>
+            <fieldset class="contact">
                 <legend>Contact Information</legend>
-
-                <label for="name">Full Name</label>
-                <input type="text" id="name" name="user_name" placeholder="Required" required>
-
-                <label for="email">Email Address</label>
-                <input type="email" id="email" name="user_email" placeholder="Required" required>
-
-                <label for="phone">Phone Number</label>
-                <input type="tel" id="phone" name="user_phone" placeholder="Phone number">
-
-                <label for="address">Street Address</label>
-                <input type="text" id="address" name="user_address" placeholder="Address">
-
-                <label for="city">City</label>
-                <input type="text" id="city" name="user_city" placeholder="City">
-
-                <label for="state">State</label>
-                <select id="state" name="user_state">
-                    <option value="" disabled selected>Choose State</option>
-                    <option value="Alabama">Alabama</option>
-                    <option value="Alaska">Alaska</option>
-                    <option value="Arizona">Arizona</option>
-                    <option value="Arkansas">Arkansas</option>
-                    <option value="California">California</option>
-                    <option value="Colorado">Colorado</option>
-                    <option value="Connecticut">Connecticut</option>
-                    <option value="Delaware">Delaware</option>
-                    <option value="Florida">Florida</option>
-                    <option value="Georgia">Georgia</option>
-                    <option value="Hawaii">Hawaii</option>
-                    <option value="Idaho">Idaho</option>
-                    <option value="Illinois">Illinois</option>
-                    <option value="Indiana">Indiana</option>
-                    <option value="Iowa">Iowa</option>
-                    <option value="Kansas">Kansas</option>
-                    <option value="Kentucky">Kentucky</option>
-                    <option value="Louisiana">Louisiana</option>
-                    <option value="Maine">Maine</option>
-                    <option value="Maryland">Maryland</option>
-                    <option value="Massachusetts">Massachusetts</option>
-                    <option value="Michigan">Michigan</option>
-                    <option value="Minnesota">Minnesota</option>
-                    <option value="Mississippi">Mississippi</option>
-                    <option value="Missouri">Missouri</option>
-                    <option value="Montana">Montana</option>
-                    <option value="Nebraska">Nebraska</option>
-                    <option value="Nevada">Nevada</option>
-                    <option value="New-Hampshire">New Hampshire</option>
-                    <option value="New-Jersey">New Jersey</option>
-                    <option value="New-Mexico">New Mexico</option>
-                    <option value="New-York">New York</option>
-                    <option value="North-Carolina">North Carolina</option>
-                    <option value="North-Dakota">North Dakota</option>
-                    <option value="Ohio">Ohio</option>
-                    <option value="Oklahoma">Oklahoma</option>
-                    <option value="Oregon">Oregon</option>
-                    <option value="Pennsylvania">Pennsylvania</option>
-                    <option value="Rhode-Island">Rhode Island</option>
-                    <option value="South-Carolina">South Carolina</option>
-                    <option value="South-Dakota">South Dakota</option>
-                    <option value="Tennessee">Tennessee</option>
-                    <option value="Texas">Texas</option>
-                    <option value="Utah">Utah</option>
-                    <option value="Vermont">Vermont</option>
-                    <option value="Virginia">Virginia</option>
-                    <option value="Washington">Washington</option>
-                    <option value="West-Virginia">West Virginia</option>
-                    <option value="Wisconsin">Wisconsin</option>
-                    <option value="Wyoming">Wyoming</option>
-                </select>
-
-                <label for="zip">Zip Code</label>
-                <input type="number" id="zip" name="user_zip" placeholder="Zip">
+                <div>
+                    <label for="name">Full Name</label>
+                    <input type="text" id="name" name="user_name" placeholder="Required" required>
+                </div>
+                <div>    
+                    <label for="email">Email Address</label>
+                    <input type="email" id="email" name="user_email" placeholder="Required" required>
+                </div>
+                <div>
+                    <label for="phone">Phone Number</label>
+                    <input type="tel" id="phone" name="user_phone" placeholder="Phone number">
+                </div>
+                <div>
+                    <label for="address">Street Address</label>
+                    <input type="text" id="address" name="user_address" placeholder="Address">
+                </div>
+                <div>
+                    <label for="city">City</label>
+                    <input type="text" id="city" name="user_city" placeholder="City">
+                </div>
+                <div>
+                    <label for="state">State</label>
+                    <select id="state" name="user_state">
+                        <option value="" disabled selected>Choose State</option>
+                        <option value="Alabama">Alabama</option>
+                        <option value="Alaska">Alaska</option>
+                        <option value="Arizona">Arizona</option>
+                        <option value="Arkansas">Arkansas</option>
+                        <option value="California">California</option>
+                        <option value="Colorado">Colorado</option>
+                        <option value="Connecticut">Connecticut</option>
+                        <option value="Delaware">Delaware</option>
+                        <option value="Florida">Florida</option>
+                        <option value="Georgia">Georgia</option>
+                        <option value="Hawaii">Hawaii</option>
+                        <option value="Idaho">Idaho</option>
+                        <option value="Illinois">Illinois</option>
+                        <option value="Indiana">Indiana</option>
+                        <option value="Iowa">Iowa</option>
+                        <option value="Kansas">Kansas</option>
+                        <option value="Kentucky">Kentucky</option>
+                        <option value="Louisiana">Louisiana</option>
+                        <option value="Maine">Maine</option>
+                        <option value="Maryland">Maryland</option>
+                        <option value="Massachusetts">Massachusetts</option>
+                        <option value="Michigan">Michigan</option>
+                        <option value="Minnesota">Minnesota</option>
+                        <option value="Mississippi">Mississippi</option>
+                        <option value="Missouri">Missouri</option>
+                        <option value="Montana">Montana</option>
+                        <option value="Nebraska">Nebraska</option>
+                        <option value="Nevada">Nevada</option>
+                        <option value="New-Hampshire">New Hampshire</option>
+                        <option value="New-Jersey">New Jersey</option>
+                        <option value="New-Mexico">New Mexico</option>
+                        <option value="New-York">New York</option>
+                        <option value="North-Carolina">North Carolina</option>
+                        <option value="North-Dakota">North Dakota</option>
+                        <option value="Ohio">Ohio</option>
+                        <option value="Oklahoma">Oklahoma</option>
+                        <option value="Oregon">Oregon</option>
+                        <option value="Pennsylvania">Pennsylvania</option>
+                        <option value="Rhode-Island">Rhode Island</option>
+                        <option value="South-Carolina">South Carolina</option>
+                        <option value="South-Dakota">South Dakota</option>
+                        <option value="Tennessee">Tennessee</option>
+                        <option value="Texas">Texas</option>
+                        <option value="Utah">Utah</option>
+                        <option value="Vermont">Vermont</option>
+                        <option value="Virginia">Virginia</option>
+                        <option value="Washington">Washington</option>
+                        <option value="West-Virginia">West Virginia</option>
+                        <option value="Wisconsin">Wisconsin</option>
+                        <option value="Wyoming">Wyoming</option>
+                    </select>
+                </div>
+                <div>
+                    <label for="zip">Zip Code</label>
+                    <input type="number" id="zip" name="user_zip" placeholder="Zip">
+                </div>
             </fieldset>
 
-            <fieldset>
+            <fieldset class="newsletter">
                 <legend>Newsletter</legend>
-
-                <label>Select the newsletters you would like to receive</label><br>
-                <input type="checkbox" id="html" value="news_html" name="user_newsletters"><label for="html">HTML News</label><br>
-                <input type="checkbox" id="css" value="news_css" name="user_newsletters"><label for="css">CSS News</label><br>
-                <input type="checkbox" id="javascript" value="news_javascript"  name="user_newsletters"><label for="javascript">Javascript News</label><br>
-                
-                <label>Newsletter format</label><br>
-                <input type="radio" id="html-format" value="html-format" name="user_format"><label for="html-format">HTML</label><br>
-                <input type="radio" id="plain-text" value="plain-text" name="user_format"><label for="plain-text">Plain text</label><br>
-
-                <label for="other-topics">Other topics you'd like to hear about</label><br>
-                <textarea id="other-topics" name="other_topics" placeholder="Type here"></textarea>
-                
+                <div>
+                    <label>Select the newsletters you would like to receive</label><br>
+                    <input type="checkbox" id="html" value="news_html" name="user_newsletters"><label for="html">HTML News</label><br>
+                    <input type="checkbox" id="css" value="news_css" name="user_newsletters"><label for="css">CSS News</label><br>
+                    <input type="checkbox" id="javascript" value="news_javascript"  name="user_newsletters"><label for="javascript">Javascript News</label><br>
+                </div>
+                <div>
+                    <label>Newsletter format</label><br>
+                    <input type="radio" id="html-format" value="html-format" name="user_format"><label for="html-format">HTML</label><br>
+                    <input type="radio" id="plain-text" value="plain-text" name="user_format"><label for="plain-text">Plain text</label><br>
+                </div> 
+                <div>   
+                    <label for="other-topics">Other topics you'd like to hear about</label><br>
+                    <textarea id="other-topics" name="other_topics" placeholder="Type here"></textarea>
+                </div>
             </fieldset> 
             <button type="submit">Sign Up</button>
         </form>
