--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
                 </div>
                 <div>
                     <label for="zip">Zip Code</label>
-                    <input type="number" id="zip" name="user_zip" placeholder="Zip">
+                    <input type="text" id="zip" name="user_zip" placeholder="Zip">
                 </div>
             </fieldset>
 
